--- a/indexstyles.css
+++ b/indexstyles.css
@@ -1,8 +1,7 @@
 .header {
   background-color: #2E3833; 
-  width: 13vw;
+  width: 20vw;
   height: 100vh;
-  padding: 40px;
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -10,7 +9,25 @@
 
 .header a {
   margin: 10px;
+  border-radius: 10px ;
   color: #F9F8F8;
   text-decoration: none;
+  padding: 10px;
   font-size: 1.5em;
+}
+
+.header a:hover {
+  background-color: #252d29;
+  transition: 0.2s ease-in-out;
+}
+
+.active {
+  background-color: #9A8873;
+}
+
+.posts {
+  margin-left: 20vw;
+  width: 80vw;
+  height: 100vh;
+  background-color: #211F1C;
 }
