--- a/indexstyles.css
+++ b/indexstyles.css
@@ -55,9 +55,25 @@ html {overflow: hidden;}
 }
 
 .headerimagewrapper {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   overflow: hidden;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.iconwrapper {
+  display: flex;
+}
+
+.margin {
+  margin-right: 5px;
+}
+
+.postfooter {
+  margin-top: 4px;
+  display: flex;
+  align-items: center;justify-content: space-between
 }
 
 .headerimage {
@@ -65,5 +81,8 @@ html {overflow: hidden;}
 }
 
 .postimage {
-
+  width: 100%;
+  height:fit-content;
+  overflow: hidden;
+  border-radius: 10px;
 }
