--- a/styles/profilestyles.css
+++ b/styles/profilestyles.css
@@ -1,3 +1,116 @@
+.header {
+  background-color: #2E3833; 
+  width: 20vw;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+}
+
+html {overflow: hidden;}
+
+.header a {
+margin: 10px;
+border-radius: 10px ;
+color: #F9F8F8;
+text-decoration: none;
+padding: 10px;
+font-size: 1.5em;
+}
+
+.header a:hover {
+background-color: #252d29;
+transition: 0.2s ease-in-out;
+}
+
+.active {
+background-color: #9A8873;
+}
+
+.profilos{
+  display:flex;
+  background-color: #211F1C;
+  padding: 0px 150px;
+}
+.ciara{
+  width: 100%;
+}
+.Udaje{
+  display:flex
+
+}
+.ryba{
+  margin: 10px;
+  margin-right: 50px;
+}
+
+.wrapper {
+
+  width: 80vw;
+  height: 100vh;
+  overflow: auto;
+  margin-left: 20vw;
+}
+.settings{
+ 
+  margin: 10px;
+  margin-right: 50px;
+  max-width: 100%;
+  max-height: 100%;
+  height: 20px;
+  width: 25px;
+}
+
+.ryba {
+    border-radius: 50%;
+  }
+
+.Meno{
+  text-align: right;
+  color:#f9f8f8 ;
+}
+
+.button {
+  background-color: lightgrey;
+  border: none;
+  color: black;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  cursor: pointer;
+  height: min-content;
+  margin-top: 20px;
+  margin-left: 25px;
+  border-radius: 10px;
+}
+.bla{
+  align-items:center ;
+}
+.status{
+  color: #f9f8f8;
+}
+.settings{
+  cursor: pointer;
+}
+
+html{background-color: #211F1C;}
+
+
+.post{
+  height: 20vw;
+  width: 19vw;
+  border: 1px solid #f9f8f8;
+  margin: 0.25vw;
+}
+.bckground{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
